--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,155 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+:root {
+  --pd: 2rem;
+  --delay: 500ms;
+  --main-color: #1b1a1a;
+  --second-color: #343434;
+  --font-color: #eeeeee;
+}
+
+@font-face {
+  font-family: Stolzl;
+  src: url("../src/assets/fonts/Stolzl-Regular.ttf");
+  font-weight: regular;
+  font-style: normal;
+}
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.clickPrint {
+  background-image: url('../src/assets/clickPrint.png');
+  display: block;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  z-index: 20;
+}
+
+.target_lick {
+    background-image: url('../src/assets/target.png');
+    width: 350px;
+    height: 350px;
+    margin: auto;
+}
+
+header {
+    width: 100%;
+    height: 20vh;
+    padding: 0.3rem 2rem 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#heaer_clock, #timer  {
+    font-size: 2.5rem;
+    margin: auto 0;
+}
+
+.counterNumber, .counter {
+    font-size: 1.75rem;
+}
+
+.wrapper_heaer_clock {
+  margin: auto 0;
+}
+
+.counterNumber, .counter {
+    font-size: 1.75rem;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: auto 0;
+  padding-left: 2rem;
+}
+
+.heaer_logo {
+  display: flex;
+  justify-content: space-between;
+}
+
+section {
+  width: 100%;
+  height: 70vh;
+}
+
+p {
+  margin: auto 0;
 }
 
 body {
-    font-size: 14px;
-    font-family: 'Roboto', sans-serif;
-    height: 100vh;
-    width: 100%;
-    padding: 2rem;    
-}
-
-.menu {
-    position: fixed;
-    z-index: 1000;
-    width: 150px;
-    background: #1b1a1a;
-    border-radius: 5px;
-    display: none;
-    list-style: none;
+  background-image: url('../src/assets/bg.jpg');
+  font-size: 14px;
+  font-family: Stolzl;
+  height: 100vh;
+  width: 100%;
+  padding: 0 2rem 0 2rem;
 }
 
 .menu.open {
-    display: block;
+  display: block;
+}
+
+.heaer_help {
+  font-size: 2.5rem;
+  margin: auto 0;
+  border: none;
+  background:none;
+}
+.heaer_help:hover {
+  color: orange;
+}
+.logo {
+  background-image: url('../src/assets/cub.png');
+  width: 100px;
+  height: 100px;
+  margin: auto 0;
+}
+
+footer {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  padding: 0 2rem;
+  margin: 0 -2rem;
+}
+
+.menu {
+  position: fixed;
+  z-index: 1000;
+  width: 150px;
+  background-image: url('../src/assets/bg.jpg');
+  border: 1px solid #1b1a1a;
+  box-shadow: 0 0 7px 0 rgb(0 0 0 / 30%);
+  border-radius: 5px;
+  display: none;
+  list-style: none;
+  padding: 5px;
 }
 
 .menu .menu-item {
-    padding: 8px 10px;
-    font-size: 1rem;
-    color: #eee;
-    cursor: pointer;
-    transition: background-color .2s ease-in;
-    border-radius: inherit;
+  padding: 8px 10px;
+  font-size: 1rem;
+  color: #1b1a1a;
+  cursor: pointer;
+  transition: background-color .2s ease-in;
+  border-radius: inherit;
 }
 
 .menu .menu-item:hover {
-    background: #343434;
+  background: orange;
+}
+
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
